# Kedex

./: .gitignore  PRD.md  Prompt.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  tsconfig.json  vite.config.ts
core/: Cargo.toml
core/src/: agent.rs  commands.rs  llm.rs  main.rs  models.rs  parser.rs  secrets.rs
scripts/: generate-icon.mjs  write-cjs-markers.mjs
src/main/: db.ts  fs-ops.ts  git.ts  index.ts  main.ts  pty-manager.ts  rust-bridge.ts  util.ts
src/preload/: preload.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/components/: ApprovalBar.tsx  Sidebar.tsx  ThreadHeader.tsx  Toaster.tsx  TopBar.tsx
src/renderer/src/components/browser/: BrowserView.tsx
src/renderer/src/components/chat/: ChatStream.tsx  Markdown.tsx  ModeMenu.tsx  ModelMenu.tsx  PromptArea.tsx
src/renderer/src/components/diff/: DiffViewer.tsx
src/renderer/src/components/plan/: PlanViewer.tsx
src/renderer/src/components/settings/: AppearanceTab.tsx  BrowserSettingsTab.tsx  CloudMcpTab.tsx  GeneralTab.tsx  LanguageSwitcher.tsx  McpTab.tsx  ProvidersTab.tsx  SettingsModal.tsx  ShortcutsTab.tsx  SkillsTab.tsx  TerminalTab.tsx  ThemeSwitcher.tsx  VoiceTab.tsx  WorktreesTab.tsx
src/renderer/src/components/ui/: Button.tsx  Dialog.tsx  (+9 more)
src/renderer/src/hooks/: useDebouncedValue.ts  useHydrate.ts  useIpcEvents.ts
src/renderer/src/lib/: attachments.ts  i18n.ts  platform.ts  theme.ts  useT.ts  utils.ts
src/renderer/src/store/: app.ts
src/renderer/src/styles/: global.css
src/shared/: ipc.ts
(+1 files in other folders)
