[package]
name = "kedex-core"
version = "0.1.0"
edition = "2021"
description = "Kedex core agent engine (tree-sitter, JSON-RPC, LLM streaming)"
license = "Proprietary"

[[bin]]
name = "kedex-core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tree-sitter = "0.25"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
